--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "romanice",
-  "version": "0.0.0",
-  "description": "romanice",
+  "version": "1.0.0",
+  "description": "Convert to/from Roman numerals",
   "files": [
-    "lib/"
+    "dist"
   ],
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d lib",
+    "prebuild": "rimraf dist",
+    "build": "babel src -d dist",
     "lint": "eslint --ignore-path .gitignore .",
     "pretest": "npm run lint",
     "test": "mocha --require @babel/register ./test/**/*.test.js --reporter spec",
@@ -20,8 +21,16 @@
   },
   "keywords": [
     "latin",
+    "unicode",
+    "alphabet",
+    "rome",
     "roman",
-    "numeral"
+    "decimal",
+    "number",
+    "integer",
+    "numeral",
+    "numeral-system",
+    "converter"
   ],
   "author": "Bhargav <bhargav@dkinom.dev> (https://dkinom.dev)",
   "license": "MIT",
@@ -39,6 +48,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.1.3",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2"
   }
 }
