--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
+  "main": "dist/romanice.min.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "babel src -d dist",
+    "build": "webpack",
     "lint": "eslint --ignore-path .gitignore .",
     "pretest": "npm run lint",
     "test": "mocha --require @babel/register ./test/**/*.test.js --reporter spec",
@@ -32,7 +32,11 @@
     "numeral-system",
     "converter"
   ],
-  "author": "Bhargav <bhargav@dkinom.dev> (https://dkinom.dev)",
+  "author": {
+    "name": "Bhargav",
+    "email": "bhargav@dkinom.dev",
+    "url": "https://dkinom.dev"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dkin-om/romanice/issues"
@@ -43,12 +47,15 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
